Add some safety